[tool.poetry]
name = "ns-delay"
version = "0.1.0"
description = "Program to keep track of NS delays"
authors = ["Sander Nobel <sandernobel@live.nl>"]
readme = "README.md"
packages = [{include = "ns_delay", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9.5"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
pre-commit = "^3.6.0"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
pytest = "^7.4.4"
coverage = "^7.4.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
